// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Git filter test for repo and branch selecion Test for changing repo and branch 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main gitFilterContainer StyledProps--margin-right-small"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--color StyledProps--color-grey600"
      data-icon="repository"
    >
      <svg
        height="16"
        viewBox="0 0 13 14"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="bp3-popover-wrapper repoSelectDefault Select--main bp3-fill"
    >
      <div
        class="bp3-popover-target"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="repo"
            placeholder="- Select -"
            style="padding-right: 0px;"
            type="text"
            value="gitSyncRepoTest"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="bp3-overlay bp3-overlay-inline"
      >
        <div
          class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
          style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
        >
          <div
            class="bp3-popover bp3-minimal bp3-select-popover"
            style="transform-origin: center top;"
          >
            <div
              class="bp3-popover-content"
            >
              <div>
                <ul
                  class="bp3-menu"
                >
                  <li
                    class="Select--menuItem Select--active"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                      style="--text-line-clamp: 1;"
                    >
                      common.gitSync.allRepositories
                    </p>
                  </li>
                  <li
                    class="Select--menuItem"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                      style="--text-line-clamp: 1;"
                    >
                      gitSyncRepoTest
                    </p>
                  </li>
                  <li
                    class="Select--menuItem"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                      style="--text-line-clamp: 1;"
                    >
                      gitSyncRepo
                    </p>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--margin-left-large StyledProps--color StyledProps--color-grey600"
      data-icon="git-new-branch"
    >
      <svg
        height="16"
        viewBox="0 0 13 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="bp3-popover-wrapper Select--main bp3-fill"
    >
      <div
        class="bp3-popover-target"
      >
        <div
          class="bp3-input-group bp3-disabled"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            disabled=""
            name="branch"
            placeholder="- Select -"
            style="padding-right: 0px;"
            type="text"
            value="common.gitSync.defaultBranches"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git filter test for repo and branch selecion rendering default filter 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main gitFilterContainer StyledProps--margin-right-small"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--color StyledProps--color-grey600"
      data-icon="repository"
    >
      <svg
        height="16"
        viewBox="0 0 13 14"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="bp3-popover-wrapper repoSelectDefault Select--main bp3-fill"
    >
      <div
        class="bp3-popover-target"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="repo"
            placeholder="- Select -"
            style="padding-right: 0px;"
            type="text"
            value="common.gitSync.allRepositories"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--margin-left-large StyledProps--color StyledProps--color-grey600"
      data-icon="git-new-branch"
    >
      <svg
        height="16"
        viewBox="0 0 13 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="bp3-popover-wrapper Select--main bp3-fill"
    >
      <div
        class="bp3-popover-target"
      >
        <div
          class="bp3-input-group bp3-disabled"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            disabled=""
            name="branch"
            placeholder="- Select -"
            style="padding-right: 0px;"
            type="text"
            value="common.gitSync.defaultBranches"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
